# Crossover

./: .gitignore  .gitmodules  C.c  CMakeLists.txt  README.md  bruh.c  bruh.cpp  compile.sh  compile_bstd.sh  config.h  helloWorld.c  main.cpp  testProgram.txt
cmake/: README.md  antlr4-generator.cmake.in
grammar/: BabyCobol.g4
include/antlr/: BabyCobol.interp  BabyCobol.tokens  BabyCobolBaseListener.cpp  BabyCobolBaseListener.h  BabyCobolBaseVisitor.cpp  BabyCobolBaseVisitor.h  BabyCobolLexer.cpp  BabyCobolLexer.h  BabyCobolLexer.interp  BabyCobolLexer.tokens  BabyCobolListener.cpp  BabyCobolListener.h  BabyCobolParser.cpp  BabyCobolParser.h  BabyCobolVisitor.cpp  BabyCobolVisitor.h
include/exception/: CompileException.h  NotImplemented.h
include/ir/: BCBuilder.h  BCModule.h  bcbuilder.h  bcmodule.h
include/lib/: arithmetic.h  number.h
include/model/: DataEntry.h  Field.h  NumberField.h  Record.h
include/utils/: Utils.h  utils.h
include/visitor/: DataDivisionVisitor.h  IdentificationVisitor.h  ProcedureVisitor.h
lib/: arithmetic.cpp
lib/include/: arithmetic.h  number.h  numutils.h  picture.h  picutils.h
lib/src/: arithmetic.cpp  numutils.cpp  picutils.c  picutils.cpp
src/datastructures/: DataEntry.cpp  DataTree.cpp  DataTree.h  DataTypes.cpp  Field.cpp  Field.h  NumberField.cpp  PictureField.cpp  PictureField.h  Record.cpp  Record.h
src/ir/: BCBuilder.cpp  BCModule.cpp  bcbuilder.cpp  bcmodule.cpp
src/lib/: arithmetic.cpp
src/model/: DataEntry.cpp  Field.cpp  NumberField.cpp  PictureField.cpp  Record.cpp
src/parser/: BabyCobolBaseListener.cpp  BabyCobolLexer.cpp  BabyCobolListener.cpp  BabyCobolParser.cpp
src/utils/: Utils.cpp  utils.cpp
src/visitor/: DataDivisionVisitor.cpp  DataDivisionVisitor.h  IdentificationVisitor.cpp  IdentificationVisitor.h  ProcedureVisitor.cpp  ProcedureVisitor.h  Visitor.cpp  Visitor.h
test/: banking_api.c  bruh.c  callDatadivDoubles.txt  callDatadivPrimitives.txt  callLiteralDoubles.txt  callPrimitiveLiterals.txt  call_datadiv_doubles.bc  call_datadiv_ints.bc  call_datadiv_pictures.bc  call_literal_ints.bc  call_literal_ints.txt  composite.bc  composite.txt  date_BC_CALL.bc  display.bc  empty.bc  loop.bc  move.bc  numbers.txt  overhead.c  picture.txt  scratch.bc  simple_addition.bc  testProgram.txt
test/demo/: banking_api.c
tests/: overhead.c
tests/cpp_progs/: fib.cpp  prog_says.cpp  receive_number.cpp  receive_picture.cpp  thing_with_struct.cpp
